--- a/package.json
+++ b/package.json
@@ -20,9 +20,5 @@
   "bugs": {
     "url": "https://github.com/bshinnny/API-Project/issues"
   },
-  "homepage": "https://github.com/bshinnny/API-Project#readme",
-  "dependencies": {
-    "pg": "^8.8.0"
-  },
-  "devDependencies": {}
+  "homepage": "https://github.com/bshinnny/API-Project#readme"
 }
